--- a/layouts/partials/docs/brand.html
+++ b/layouts/partials/docs/brand.html
@@ -1,7 +1,7 @@
 <h2 class="book-brand">
   <a href="{{ .Site.BaseURL }}">
     {{- with .Site.Params.BookLogo -}}
-    <img src="{{ . | relURL }}" alt="Logo" />
+    <img src="{{ . | relURL }}" alt="Logo" style="max-width:80%" />
     {{- end -}}
     <span>{{ .Site.Title }}</span>
   </a>
